[package]
name = "ctest2"
version = "0.3.1"
authors = [
  "Yuki Okushi <huyuumi.dev@gmail.com>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/JohnTitor/ctest2"
homepage = "https://github.com/JohnTitor/ctest2"
documentation = "https://docs.rs/ctest2"
description = """
Automated tests of FFI bindings.
"""
include = ["src/lib.rs", "LICENSE-*", "README.md"]
edition = "2018"

[dependencies]
#garando_syntax = "^0.1.1"
garando_syntax = { "git" = "https://github.com/GreenBeard/garando" }
cc = "1.0.1"
rustc_version = "^0.2.2"

[workspace]
members = ["testcrate"]
